# mkdf

./: .gitignore  CHANGELOG_0.1.1.txt  Makefile  README.md  README_EN.md  README_FR.md  TODO.md  changes.txt  improvement.TODO.md  install.sh  man.txt  mkdf.1  mkdf.en.1  pyproject.toml  rebuild_mkdf.sh  requirements.txt  setup.py
.github/: FUNDING.yml
config/: defaults.json  templates.json  web.json
docs/: mantra.md  mantra_en.md
docs/EN/: cli_usage.md  developer_guide.md  index.md  installation.md  project_templates.md  use_cases.md  web_usage.md
docs/FR/: cli_usage.md  configuration.md  developer_guide.md  index.md  installation.md  project_templates.md  use_cases.md  web_usage.md
include/: cli_handler.h  config_handler.h  directory_handler.h  web_handler.h
refactor/: Makefile
refactor/include/fs/: brace_expansion.h  dir_creator.h  file_creator.h  path_analyzer.h
refactor/include/templates/: template_factory.h  template_manager.h  template_types.h
refactor/src/fs/: brace_expansion.c  dir_creator.c  file_creator.c  path_analyzer.c
refactor/src/main/: test_fs.c
refactor/src/templates/: template_factory.c  template_manager.c
src/: cli_handler.c  config_handler.c  directory_handler.c  main.c  web_handler.c
src/mkdf/: core.py  main.py  utils.py
src/mkdf/cli/: cli_parser.py  interactive.py
src/mkdf/config/: config_manager.py
src/mkdf/fs/: brace_expansion.py  dir_creator.py  file_creator.py  fs_utils.py  path_analyzer.py
src/mkdf/templates/: docker_templates.py  template_factory.py
src/mkdf/web/: server.py
test/: mkdf
tests/: test_backend_factory.py  test_brace_expansion_new.py  test_cli_workflows.py  test_database_factory.py  test_docker_combos.py  test_docker_generation.py  test_env_generation.py  test_frontend_factory.py  test_infrastructure_factory.py  test_web_interface.py  test_web_interface_new.py
tests/backup/: test_brace_expansion.py  test_cli_units.py  test_cli_workflows.py  test_docker_combos.py  test_env_generation.py  test_web_interface.py
web/: index.html
web/css/: 8bit.css  cyberpunk.css  dark.css  girly.css  light.css
web_docker_test/: docker-compose.yml
web_docker_test/backend/: .env.backend  Dockerfile  requirements.txt
web_docker_test/backend/app/: main.py
(+48 files in other folders)
