[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mkdf"
version = "1.0.0"
description = "Make Directories and Files - Professional Project Creator with Rich CLI and Web UI"
authors = ["Fassih Belmokhtar <contact@fassih.ch>"]
license = "AGPL-3.0"
readme = "README.md"
homepage = "https://github.com/Noziop/mkdf-py"
repository = "https://github.com/Noziop/mkdf-py"
documentation = "https://github.com/Noziop/mkdf-py#readme"
keywords = ["cli", "project-generator", "docker", "templates", "development", "rich", "rainbow", "web-ui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Code Generators",
    "Topic :: System :: Software Distribution",
    "Framework :: Rich",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.0.0"
typer = "^0.9.0"
pydantic = "^2.0.0"
flask = "^3.1.1"
click = "~8.1.7"
requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
mkdf = "mkdf.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Noziop/mkdf-py/issues"
"Changelog" = "https://github.com/Noziop/mkdf-py/blob/main/CHANGELOG.md"

# Black formatting
[tool.black]
line-length = 88
target-version = ['py38']

# isort configuration  
[tool.isort]
profile = "black"
multi_line_output = 3

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=mkdf --cov-report=html --cov-report=term-missing"
